--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^2.0.0",
     "core-js": "^3.6.4",
     "markdown-it-vue": "^1.0.11",
+    "tui-editor": "^1.4.10",
     "vue": "^2.6.11"
   },
   "devDependencies": {
